--- a/src/app/components/userprofile/userprofile.component.scss
+++ b/src/app/components/userprofile/userprofile.component.scss
@@ -41,6 +41,10 @@
 .cursor-pointer{
   cursor: pointer;
 }
+.btn-tran-2{
+  background-color: transparent;
+  color: rgb(35, 161, 199);
+}
 
 .text-custom {
     border-left: 5px solid #4682B4;
