--- a/src/app/components/dayview/dayview.component.html
+++ b/src/app/components/dayview/dayview.component.html
@@ -19,7 +19,7 @@
               <div class="dropdown">
                 <button class="btn btn-background dropdown-toggle ps-0" type="button" id="dropdownMenuButton"
                   data-bs-toggle="dropdown" aria-expanded="false">
-                  <img src="../../../assets/logo/dropdown_dayview.svg" height="17px" alt=""> Day view
+                  <img src="../../../assets/logo/dropdown_dayview.svg" height="17px" alt=""> Week view
                 </button>
                 <ul class="dropdown-menu " aria-labelledby="dropdownMenuButton">
                   <li><a class="dropdown-item" href="../calendarview/calendarview.component.html"
@@ -247,6 +247,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
+
 
 
 
