--- a/src/app/components/loginpage/loginpage.component.scss
+++ b/src/app/components/loginpage/loginpage.component.scss
@@ -1,3 +1,4 @@
+
 body {
     font-family: Montserrat;
     width: 1236px;
@@ -88,4 +89,7 @@ body {
     position: absolute;
     top: 9px;
     left: 9px;
+  }
+  .log-check :hover{
+    cursor: pointer;
   }
