--- a/src/app/components/monthview/monthview.component.scss
+++ b/src/app/components/monthview/monthview.component.scss
@@ -115,6 +115,7 @@
 
 .card-title{
    font-size: 18px;
+   font-weight: 1000;
 }
 .card-title-1{
    font-size: 18px;
@@ -629,3 +630,51 @@ body {
     top: 9px;
     left: 17px;
   }
+
+
+  .calendar-container {
+   /* Add your styles here */
+   border: none;
+ }
+
+ .carousel-button{
+   border: none;
+   background-color: transparent;
+ }
+ 
+ .month-slider {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+ 
+ .months {
+   display: flex;
+   justify-content: center;
+   
+   width: 100px; /* Adjust width as needed */
+ }
+ 
+ .months .active {
+   font-weight: bold;
+ }
+ 
+ .calendar-grid {
+   display: grid;
+   border: none;
+   grid-template-columns: repeat(7, 1fr);
+ }
+ 
+ .week {
+   display: contents; /* Ensure each week is displayed as a row */
+ }
+
+ .day {
+   padding: 10px;
+   text-align: center;
+ }
+ 
+ .today {
+   background-color: rgb(192, 192, 192);
+ }
+ 
