--- a/src/app/components/timetask/timetask.component.scss
+++ b/src/app/components/timetask/timetask.component.scss
@@ -53,6 +53,7 @@ body {
       font-weight: 400;
       line-height: 20px;
       letter-spacing: 0.25px;
+      font-family: "montserrat";
       text-align: left;
       color: #708090;
       height: 0;
