--- a/src/app/components/userprofile/userprofile.component.html
+++ b/src/app/components/userprofile/userprofile.component.html
@@ -6,12 +6,33 @@
         </div>
         <div class="d-flex justify-content-between">
             <div>
-                <span class="fw-semibold fs-5">Camile Jensen</span>
-                <p class="text-secondary">camjenadvo.dk</p>
+                <span class="fw-semibold fs-5">{{name}}</span>
+                <p class="text-secondary">{{email}}</p>
             </div>
             <div>
-                <span class="fw-semibold fs-5 text-danger cursor-pointer" [routerLink]="['/']"
-                    routerLinkActive="router-link-active">Log out <i class="bi bi-box-arrow-left fs-4 mx-1"></i></span>
+                <button type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter"><span
+                        class="fw-semibold fs-5 text-danger cursor-pointer" routerLinkActive="router-link-active">Log
+                        out <i class="bi bi-box-arrow-left fs-4 mx-1"></i></span></button>
+            </div>
+            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title-1" id="exampleModalCenterTitle">Are you sure you want to log out?
+                            </h5>
+
+                        </div>
+                        <div class="modal-body">
+                            After logging out you will be signed out from you profile
+                        </div>
+                        <div class="modal-footer justify-content-end">
+                            <button type="button" class="btn btn-tran" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-tran-2" (click)="clearStorage()" [routerLink]="'/'"
+                                data-dismiss="modal">Yes</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
